--- a/fishing-store-app.csproj
+++ b/fishing-store-app.csproj
@@ -2,10 +2,18 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>fishing_store_app</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\cashBox.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\cashBox.png" />
+  </ItemGroup>
 
 </Project>
