--- a/fishing-store-app.csproj
+++ b/fishing-store-app.csproj
@@ -17,13 +17,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.PDF" Version="23.6.0" />
     <PackageReference Include="BarCode" Version="2023.6.1" />
+    <PackageReference Include="Barcoded" Version="1.0.2" />
     <PackageReference Include="BarcodeLib" Version="2.4.0" />
+    <PackageReference Include="Barcoder.Renderer.Image" Version="2.0.0" />
     <PackageReference Include="Caliburn.Micro.Core" Version="4.0.212" />
     <PackageReference Include="iTextSharp" Version="5.5.12" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
